--- a/mondo.yaml
+++ b/mondo.yaml
@@ -4,8 +4,8 @@ ontologies:
 
 ## mono
 
-  - id: mondo
-    preferredPrefix: MONDO
+  - id: modno
+    preferredPrefix:MONDO
     title: Monarch Disease Ontology
     uri: http://purl.obolibrary.org/obo/mondo.owl
     description: "a semi-automatically constructed ontology that merges in multiple disease resources to yield a coherent merged ontology"
